--- a/FrontEnd/register.html
+++ b/FrontEnd/register.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Tela de registro do sistema">
   <meta name="author" content="Lucas Vilela">
 
-  <title>SetpointIdeal - Cadastrar</title>
+  <title>IdealSetPoint - Cadastrar</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
