--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Tela inicial do sistema">
   <meta name="author" content="Lucas Vilela">
 
-  <title>SB Admin 2 - Dashboard</title>
+  <title>IdealSetPoint - Dashboard</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -49,7 +49,7 @@
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-laugh-wink"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+        <div class="sidebar-brand-text mx-3">IdealSetPoint <sup>2</sup></div>
       </a>
 
       <!-- Divider -->
@@ -74,8 +74,8 @@
         <div id="menuSensor" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Opções</h6>
-            <a class="collapse-item" href="buttons.html">Cadastrar</a>
-            <a class="collapse-item" href="cards.html">Listar</a>
+            <a class="collapse-item" href="#">Cadastrar</a>
+            <a class="collapse-item" href="index.html">Listar</a>
           </div>
         </div>
       </li>
@@ -92,8 +92,8 @@
         <div id="menuUsuario" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Opções</h6>
-            <a class="collapse-item" href="cadastrar.html">Cadastrar</a>
-            <a class="collapse-item" href="listar.html">Listar</a>
+            <a class="collapse-item" href="register.html">Cadastrar</a>
+            <a class="collapse-item" href="index.html">Listar</a>
           </div>
         </div>
       </li>
@@ -103,7 +103,7 @@
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>Leituras</span></a>
       </li>
@@ -124,7 +124,7 @@
         <div class="container-fluid">
 
           <!-- Content Row -->
-          <div class="row">
+          <div class="row mt-5">
 
             <!-- Earnings (Monthly) Card Example -->
             <div class="col-xl-3 col-md-6 mb-4">
@@ -167,7 +167,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Quantidade de leituras</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">3</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">4</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-comments fa-2x text-gray-300"></i>
@@ -183,11 +183,11 @@
          <!-- DataTales Example -->
          <div class="card shadow mb-4">
           <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Sensores</h6>
           </div>
           <div class="card-body">
             <div class="table-responsive">
-              <table class="table table-bordered" id="dados" width="100%" cellspacing="0">
+              <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                   <tr>
                     <th>ID</th>
