--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Tela de login para o sistema de monitoramento">
+  <meta name="author" content="Lucas Vilela">
 
   <title>IdealSetpoint - Login</title>
 
